clean up repo: remove Advisory Drift content, translate to English
- Remove ad_typologies.py and ad_ode_dynamics.py (book-specific, not SSRN paper)
- Remove 10 Advisory Drift figures from experiments/figures/
- Translate all Python docstrings and comments from Dutch to English
- Update pyproject.toml description to English
- Update README.md experiments table (remove deleted scripts)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "beleidsdynamica-v4"
 version = "0.4.0"
-description = "Beleidsdynamica v4: Relationeel, Dynamisch, Attractor-Bewust"
+description = "Institutional Field Dynamics v4: Relational, Dynamic, Attractor-Aware"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
